# ChovL

./: .gitignore  CMakeLists.txt  README.md  chovl.l  chovl.y  diff_test_main.cpp  main.cpp  test_main.cpp  validation_test_main.cpp
docs/: design.tex  docs.tex  start_page.tex
example/: Makefile  stdlib.chv  test_app.chv
include/: ast.h  context.h  operators.h  scope.h  value.h
src/: ast.cpp  context.cpp  operators.cpp  scope.cpp  value.cpp
tests/: test1.in  test_and_or.chv  test_and_or.gold  test_array.chv  test_array.gold  test_block_body.chv  test_block_body.gold  test_block_body_void.gold  test_cast_ops.chv  test_cast_ops.gold  test_char.chv  test_char.gold  test_comment.chv  test_comment.gold  test_div.chv  test_div.gold  test_eq.chv  test_eq.gold  test_extern_foo.chv  test_func_call.chv  test_func_call.gold  test_func_decl.chv  test_func_decl.gold  test_func_decl_trailing.chv  test_func_decl_trailing.gold  test_func_def.chv  test_func_def.gold  test_func_def_trailing.chv  test_func_def_trailing.gold  test_func_param.chv  test_func_param.gold  test_if_expr.chv  test_if_expr.gold  test_if_stmt.chv  test_if_stmt.gold  test_multi_assignment.chv  test_multi_assignment.gold  test_order_of_ops.chv  test_order_of_ops.gold  test_pointers.chv  (+9 more)
